--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"OSL-3.0"
 		],
 	"require": {
-		"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0"
+		"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
+		"magento/module-catalog": "100.0.*|101.0.*|102.0.*"
 		},
 	"autoload": {
 	"files": [ "registration.php" ],
