--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,23 @@
     "description": "Extension redirects a exact matches for sku to the corresponding product.",
     "type": "magento2-module",
 	"version": "2.0.2",
+    "authors": [{
+        "name" : "Karliuka Vitalii",
+        "email": "karliuka.vitalii@gmail.com"
+    }],	
 	"license": [
 		"OSL-3.0"
-		],
+	],
 	"require": {
 		"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
 		"magento/module-catalog": "100.0.*|101.0.*|102.0.*"
-		},
+	},
 	"autoload": {
-	"files": [ "registration.php" ],
-	"psr-4": {
-		"Faonni\\ProductSkuRedirect\\": ""
+		"files": [ 
+			"registration.php" 
+		],
+		"psr-4": {
+			"Faonni\\ProductSkuRedirect\\": ""
 		}
 	}
 }
